feat: adding Yahoo to league migration feature
